# insight-spec

./: .gitignore  README.md  cleanup.sh  dev-up.sh  init.sh  up.sh
.github/: CODEOWNERS
.github/workflows/: build-images.yml
charts/insight/: values.yaml
charts/insight/templates/: _helpers.tpl  (+2 more)
cypilot/config/: artifacts.toml
deploy/airbyte/: README.md
deploy/argo/: values.yaml
deploy/gitops/: README.md  airbyte-application.yaml  argo-application.yaml  argo-rbac-application.yaml
deploy/scripts/: install-airbyte.sh  install-argo.sh  install-insight.sh  install.sh
docs/architecture/: CONNECTORS_ARCHITECTURE.md  CONNECTOR_AUTOMATION.md  IDENTITY_RESOLUTION_V4.md
docs/connectors/: README.md
src/backend/: Cargo.toml
src/ingestion/: .dockerignore  .gitignore  README.md  cleanup.sh  logs.sh  run-init.sh  run-sync.sh  up.sh  update-workflows.sh
src/ingestion/connectors/git/bitbucket-cloud/: Dockerfile  descriptor.yaml  pyproject.toml
src/ingestion/connectors/git/bitbucket-cloud/dbt/: bitbucket_cloud__commits.sql  bitbucket_cloud__pull_requests.sql  bitbucket_cloud__pull_requests_reviewers.sql
src/ingestion/connectors/git/bitbucket-cloud/source_bitbucket_cloud/: source.py  spec.json
src/ingestion/connectors/git/bitbucket-cloud/source_bitbucket_cloud/clients/: auth.py  concurrent.py  rate_limiter.py
src/ingestion/connectors/git/bitbucket-cloud/source_bitbucket_cloud/streams/: base.py  branches.py  comments.py  commits.py  file_changes.py  pr_comments.py  pr_commits.py  pull_requests.py  repositories.py  reviews.py
src/jobs/: Insight.Jobs.sln
(+205 files in other folders)
